--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/REST API/node_modules
+/REST API/nodemon.json
+/REST API/.env
+/REST API/.vscode
 /node_modules
 /.pnp
 .pnp.js
